# mpatch

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  pypi.yml  python-ci.yml  release.yml  test-report.yml
benches/: mpatch_bench.rs
bindings/python/: .gitignore  Cargo.toml  README.md  mpatch.pyi  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_mpatch.py
src/: lib.rs  main.rs
tests/: patch_apply_tests.rs
