[package]
name = "mpatch"
version = "0.3.1"
edition = "2021"
description = "A smart, context-aware patch tool that applies diffs using fuzzy matching, ideal for AI-generated code."
authors = ["Romelium <author@romelium.com>"]
repository = "https://github.com/romelium/mpatch"
license = "MIT"
keywords = ["patch", "diff", "cli", "fuzzy", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
colored = "2.2.0"
env_logger = "0.11.8"
log = "0.4.28"
rayon = "1.11.0"
similar = "2.7.0"
thiserror = "1.0.69"

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3.23.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bin]]
name = "mpatch"
path = "src/main.rs"

[lib]
name = "mpatch"
path = "src/lib.rs"

[[bench]]
name = "mpatch_bench"
harness = false
