[package]
name = "mpatch_py"
version = "1.6.3"
edition = "2021"
description = "A smart, context-aware patch tool that applies diffs using fuzzy matching, ideal for AI-generated code."
authors = ["Romelium <author@romelium.com>"]
repository = "https://github.com/romelium/mpatch"
license = "MIT"
publish = false

[lib]
name = "mpatch" # This is the name Python will use: `import mpatch`
crate-type = ["cdylib"]

[dependencies]
mpatch = { path = "../../", default-features = false, features = ["parallel"] }
pyo3 = { version = "0.28.3", features = ["abi3-py38", "extension-module", "generate-import-lib"] }
